--- a/src/components/home_cart.css
+++ b/src/components/home_cart.css
@@ -79,7 +79,7 @@ p {
           width: 100%;
           height: 50%;
           font-size: small;
-          background-color: aqua;
+          background-color: aqua
 }
 
 .card_title {
